# Autoscaling-Stream-ETL-Window-Aggregation-using-Spark-Structured-Streaming

./: .gitignore  GETTING_STARTED.md  README.md  docker-compose.yml  index.html  main.py  producer.py  pyproject.toml  requirements.txt  stream_job.py  style.css
assets/: Explaination.docx  Project-Report.docx  project.pptx
documentation/: Project-Report.docx
